# geojson2fromto

./: LICENSE  Pipfile  README.md  README.rst  __main__.py  pyproject.toml
geojson2fromto/: __init__.py  __main__.py
tests/: test_geojson2fromto.py
tests/fixtures/: roads.geojson  roads_multiline.geojson  roads_multiline_features.geojson  roads_multiline_features_properties.geojson
