[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "geojson2fromto"
author = "Weasel & Fox"
author-email = "hello@weaselandfox.com"
home-page = "https://github.com/weaselandfox/geojson2fromto"
requires = ["geopandas", "simplejson"]
description-file = "README.rst"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.6"
]

[tool.flit.scripts]
geojson2fromto = "geojson2fromto.library.geojson2fromto:main"
